# Hhh

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml  release.yml
app/: build.gradle
app/src/androidTest/java/com/aga/tinol/: MainActivityUITest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bonsai-native.cpp
app/src/main/java/com/aga/tinol/: BonsaiNative.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/res/drawable/: ic_launcher_round.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  item_message_bot.xml  item_message_user.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/aga/tinol/: ChatMessageTest.kt
scripts/: build_runtime.sh  download_model.sh  package_assets.sh  patch_llama.sh  verify_model.sh
